# ser-tel

./: README.md  main.py  pyproject.toml  requirements.txt  ser-tel.py  ser_tel.py
.github/workflows/: pylint.yml
