[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ser-split"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "telnetlib3>=4.0.2",
]

[project.scripts]
ser-tel = "ser_tel:main"

[tool.setuptools]
py-modules = ["ser_tel"]

[tool.pylint.main]
py-version = "3.12"

[tool.pylint.basic]
# Allow lowercase module names with optional underscores/hyphens.
module-rgx = "[a-z_][a-z0-9_-]*$"

[tool.pylint.design]
# This service object keeps thread/server/serial state; 12 is intentional.
max-attributes = 12
